namespace.tf
#resource "kubernetes_namespace" "namespace" {
#  metadata {
#    name = "crk-app"
#  }
#}
